frontend/test/should_fail/negative_009.grg
rule r
{
	negative {
        alternative {
			One {
				.;
				modify {
				}
			}
			Two {
				. -- .;
				modify {
				}
			}
        }
	}

	replace {
	}
}
